# MolScribe

./: .gitignore  pyproject.toml
molscribe/: augment.py  chemistry.py  constants.py  dataset.py  interface.py  model.py  utils.py
molscribe/transformer/: swin_transformer.py
