[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "MolScribe"
version = "1.1.2"
description = "MolScribe"
authors = ["Yujie Qian <yujieq@csail.mit.edu>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/thomas0809/MolScribe"
packages = [
    { include = "molscribe" },
]
include = ["molscribe/vocab/*"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "<2"
torch = "2.2.*"
timm = "^1.0.13"
rdkit-pypi = "^2022.9.5"
opencv-python = "^4.6.0"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
opennmt-py = "<3"
smilespe = "0.0.3"
albumentations = ">=1.1,<2"
ctranslate2 = "<=4.3.1"

